metadata/force-app/main/default/objects/CustomName_AvQve__c/CustomName_AvQve__c.object-meta.xml
<CustomObject>
    <description>Description_UOVjC</description>
    <label>CustomLabel_ZgHcQ</label>
    <nameField>
        <label>CustomLabel_ZgHcQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZgHcQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>