metadata/force-app/main/default/objects/CustomName_AvQve__c/fields/CustomField_wHiCO__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wHiCO__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldXDctR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>