metadata/force-app/main/default/objects/CustomName_AvQve__c/fields/CustomField_YOAQz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YOAQz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgUwwg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>